Offload client registration to queue
